# SaintAntoineV2

./: .gitignore  README.md  SPECS.md  SPECS_BUTTONSCOPE.md  SPECS_PI_VOLUME.md  SPECS_YOUTUBE_IMPORT.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
buttonscope/: __init__.py  __main__.py  sampler.py  web.py
buttonscope/templates/: index.html
deploy/: LEGACY_V1.md  saintantoine.service
saintantoine/: __init__.py  analytics.py  audio.py  config.py  controller.py  debounce.py  gpio.py  logging_setup.py  main.py  platform_detect.py  processing.py  selection.py  volume.py  webhook.py  youtube.py
saintantoine/web/: server.py
saintantoine/web/templates/: analytics.html  debug.html  index.html  songs.html
scripts/: dev_run.sh  fetch_mock_musics.py  generate_mock_musics.py  update-ytdlp.sh
tests/: conftest.py  test_analytics.py  test_audio_watchdog.py  test_buttonscope.py  test_config.py  test_controller.py  test_debounce.py  test_processing.py  test_selection.py  test_volume.py  test_web.py  test_webhook.py
