[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saintantoine"
version = "2.0.0"
description = "Button-triggered relays + music player for Raspberry Pi, with mock mode and web dashboard"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
pi = [
    "gpiozero>=1.6",
    "pygame>=2.0",
    # Unpinned on purpose: YouTube breaks extraction periodically and yt-dlp
    # ships fixes within days; a daily cron keeps it current (SPECS_YOUTUBE_IMPORT §8).
    "yt-dlp",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
saintantoine = "saintantoine.main:cli"
buttonscope = "buttonscope.__main__:cli"

[tool.setuptools.packages.find]
include = ["saintantoine*", "buttonscope*"]

[tool.setuptools.package-data]
saintantoine = ["web/templates/*.html", "web/static/*"]
buttonscope = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
